--- a/index.html
+++ b/index.html
@@ -40,21 +40,33 @@
       <h1>Recent Projects</h1>
       <div>
         <!-- Simplify -->
+        <img src="" alt="cosa abstracta 1" />
+        <h3>Simplify</h3>
+        <p>UI Design & App Development</p>
+        <a href="#">Learn More</a>
       </div>
       <div>
         <!-- Dashcoin -->
+        <img src="" alt="cosa abstracta 2" />
+        <h3>Dashcoin</h3>
+        <p>Web Development</p>
+        <a href="#">Learn More</a>
       </div>
       <div>
         <!-- Vectorify -->
+        <img src="" alt="cosa abstracta 3" />
+        <h3>Vectorify</h3>
+        <p>User Experience Design</p>
+        <a href="#">Learn More</a>
       </div>
     </section>
 
     <section>
       <h1>Hear What Our Clients Have to Say</h1>
-      <h3>
+      <p>
         "Circle helped us through every stage of our startup. We really enjoyed
         working with you."
-      </h3>
+      </p>
       <div>
         <img src="" alt="foto noia" />
         <h5>Kristin Watson</h5>
@@ -66,12 +78,33 @@
       <h1>Our Services</h1>
       <div>
         <!-- User Interface Design -->
+        <img src="" alt="ilustracio ploma" />
+        <h3>User Interface Design</h3>
+        <p>
+          Circle provides you with a stunning user interface design that is
+          accessible to everyone.
+        </p>
+        <a href="#">Learn More</a>
       </div>
       <div>
         <!-- User Experience Design -->
+        <img src="" alt="puntero" />
+        <h3>User Experience Design</h3>
+        <p>
+          Circle always focuses on delivering the best user experience to your
+          customers.
+        </p>
+        <a href="#">Learn More</a>
       </div>
       <div>
         <!-- Application Development -->
+        <img src="" alt="full" />
+        <h3>Application Development</h3>
+        <p>
+          We develop high-quality mobile and web applications using the latest
+          technology stack.
+        </p>
+        <a href="#">Learn More</a>
       </div>
     </section>
 
@@ -87,14 +120,12 @@
     <footer>
       <img src="" alt="Logo Circle" />
       <p>2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
-      <ul>
-        <li>Team</li>
-        <li>Services</li>
-        <li>About Us</li>
-        <li>Press</li>
-        <li>Projects</li>
-        <li>Privacy Policy</li>
-      </ul>
+      <a href="#">Team</a>
+      <a href="#">Services</a>
+      <a href="#">About Us</a>
+      <a href="#">Press</a>
+      <a href="#">Projects</a>
+      <a href="#">Privacy Policy</a>
     </footer>
   </body>
 </html>
