--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
     <nav>
-      <img src="" alt="Logo Circle" />
-      <div>
-        <img src="" alt="Menu" />
+      <div class="container-header">
+        <img
+          src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658238149/mid-term-work/Circle_uloxnc.png"
+          alt="Logo Circles"
+        />
+        <div>
+          <a href="#" class="menu-links menu1">Home</a>
+          <a href="#" class="menu-links">Projects</a>
+          <a href="#" class="menu-links">Services</a>
+        </div>
+        <a href="#" class="boto-contact">Contact Us</a>
       </div>
     </nav>
 
