--- a/index.html
+++ b/index.html
@@ -29,18 +29,21 @@
       </div>
     </nav>
 
-    <section>
+    <section class="section1">
       <div>
         <h1>Empower Your Business With Stunning Design!</h1>
         <p>
           Circle is a digital design and development studio. We design and
           develop astonishing websites and mobile apps.
         </p>
-        <a href="#">Get in touch</a>
-        <a href="#">See our work</a>
+        <a href="#" class="boto-contact">Get in touch</a>
+        <a href="#" class="menu-links">See our work</a>
       </div>
       <div>
-        <img src="images/person.png" alt="imatge d'una persona " />
+        <img
+          src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658245410/mid-term-work/Hero_Image_2_xu2ykg.png"
+          alt="imatge d'una persona "
+        />
       </div>
     </section>
 
