commit final class

--- a/index.html
+++ b/index.html
@@ -47,11 +47,27 @@
       </div>
     </section>
 
-    <section>
-      <img src="images/Airbnb.svg" alt="Logo d'Airbnb" />
-      <img src="images/Google.svg" alt="Logo Google" />
-      <img src="images/Microsoft.svg" alt="Logo Microsoft" />
-      <img src="images/FedEx.svg" alt="Logo FedEx" />
+    <section class="section2">
+      <img
+        src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658246442/mid-term-work/Airbnb_Logo_1_eba797.png"
+        alt="Logo d'Airbnb"
+      />
+      <img
+        src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658246481/mid-term-work/Google_Logo_1_ty98pz.png"
+        alt="Logo Google"
+      />
+      <img
+        src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658246483/mid-term-work/Group_k76jy7.png"
+        alt="Logo Microsoft"
+      />
+      <img
+        src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658246475/mid-term-work/FedEx_Logo_1_yzza2l.png"
+        alt="Logo FedEx"
+      />
+      <img
+        src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658246478/mid-term-work/Amazon_Logo_1_ye3fcc.png"
+        alt="Logo amazon"
+      />
     </section>
 
     <section>
