--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
     </nav>
 
     <section class="section1">
-      <div>
+      <div class="cont1-esquerra">
         <h1>Empower Your Business With Stunning Design!</h1>
-        <p>
+        <p class="paragraf-sec1">
           Circle is a digital design and development studio. We design and
           develop astonishing websites and mobile apps.
         </p>
-        <a href="#" class="boto-contact">Get in touch</a>
-        <a href="#" class="menu-links">See our work</a>
+        <div class="container-botonets1">
+          <a href="#" class="boto-contact">Get in touch</a>
+          <a href="#" class="menu-links">See our work</a>
+        </div>
       </div>
-      <div>
+      <div class="cont1-dreta">
         <img
           src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658245410/mid-term-work/Hero_Image_2_xu2ykg.png"
           alt="imatge d'una persona "
@@ -70,28 +72,39 @@
       />
     </section>
 
-    <section>
-      <h1>Recent Projects</h1>
-      <div>
-        <!-- Simplify -->
-        <img src="" alt="cosa abstracta 1" />
-        <h3>Simplify</h3>
-        <p>UI Design & App Development</p>
-        <a href="#">Learn More</a>
-      </div>
-      <div>
-        <!-- Dashcoin -->
-        <img src="" alt="cosa abstracta 2" />
-        <h3>Dashcoin</h3>
-        <p>Web Development</p>
-        <a href="#">Learn More</a>
-      </div>
-      <div>
-        <!-- Vectorify -->
-        <img src="" alt="cosa abstracta 3" />
-        <h3>Vectorify</h3>
-        <p>User Experience Design</p>
-        <a href="#">Learn More</a>
+    <section class="section3">
+      <h2>Recent Projects</h2>
+      <div class="grup-sec3">
+        <div class="ficha-sec3">
+          <!-- Simplify -->
+          <img
+            src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262176/mid-term-work/Rectangle_71_mqrhg9.png"
+            alt="cosa abstracta 1"
+          />
+          <h3>Simplify</h3>
+          <p>UI Design & App Development</p>
+          <a href="#">Learn More</a>
+        </div>
+        <div class="ficha-sec3">
+          <!-- Dashcoin -->
+          <img
+            src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262176/mid-term-work/Rectangle_71_1_ovsrj0.png"
+            alt="cosa abstracta 2"
+          />
+          <h3>Dashcoin</h3>
+          <p>Web Development</p>
+          <a href="#">Learn More</a>
+        </div>
+        <div class="ficha-sec3">
+          <!-- Vectorify -->
+          <img
+            src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262176/mid-term-work/Rectangle_71_2_fyze21.png"
+            alt="cosa abstracta 3"
+          />
+          <h3>Vectorify</h3>
+          <p>User Experience Design</p>
+          <a href="#">Learn More</a>
+        </div>
       </div>
     </section>
 
