--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
             src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262176/mid-term-work/Rectangle_71_mqrhg9.png"
             alt="cosa abstracta 1"
           />
-          <h3>Simplify</h3>
-          <p>UI Design & App Development</p>
-          <a href="#">Learn More</a>
+          <div class="text-fitxa">
+            <h3>Simplify</h3>
+            <p>UI Design & App Development</p>
+            <a href="#">Learn More</a>
+          </div>
         </div>
         <div class="ficha-sec3">
           <!-- Dashcoin -->
@@ -91,9 +93,11 @@
             src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262176/mid-term-work/Rectangle_71_1_ovsrj0.png"
             alt="cosa abstracta 2"
           />
-          <h3>Dashcoin</h3>
-          <p>Web Development</p>
-          <a href="#">Learn More</a>
+          <div class="text-fitxa">
+            <h3>Dashcoin</h3>
+            <p>Web Development</p>
+            <a href="#">Learn More</a>
+          </div>
         </div>
         <div class="ficha-sec3">
           <!-- Vectorify -->
@@ -101,23 +105,34 @@
             src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262176/mid-term-work/Rectangle_71_2_fyze21.png"
             alt="cosa abstracta 3"
           />
-          <h3>Vectorify</h3>
-          <p>User Experience Design</p>
-          <a href="#">Learn More</a>
+          <div class="text-fitxa">
+            <h3>Vectorify</h3>
+            <p>User Experience Design</p>
+            <a href="#">Learn More</a>
+          </div>
         </div>
       </div>
     </section>
 
-    <section>
-      <h1>Hear What Our Clients Have to Say</h1>
-      <p>
-        "Circle helped us through every stage of our startup. We really enjoyed
-        working with you."
-      </p>
+    <section class="section4">
       <div>
-        <img src="" alt="foto noia" />
-        <h5>Kristin Watson</h5>
-        <p>Booking.com</p>
+        <div>
+          <h2>Hear What Our Clients Have to Say</h2>
+          <p>
+            "Circle helped us through every stage of our startup. We really
+            enjoyed working with you."
+          </p>
+        </div>
+        <div class="targeta-noia">
+          <img
+            src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262154/mid-term-work/Ellipse_24_ssiqci.png"
+            alt="foto noia"
+          />
+          <div>
+            <h5>Kristin Watson</h5>
+            <p>Booking.com</p>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -165,14 +180,25 @@
     </section>
 
     <footer>
-      <img src="" alt="Logo Circle" />
-      <p>2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
-      <a href="#">Team</a>
-      <a href="#">Services</a>
-      <a href="#">About Us</a>
-      <a href="#">Press</a>
-      <a href="#">Projects</a>
-      <a href="#">Privacy Policy</a>
+      <div class="footer-logo">
+        <img
+          src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658238149/mid-term-work/Circle_uloxnc.png"
+          alt="Logo Circle"
+        />
+        <p>2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
+      </div>
+      <div class="footer-menu">
+        <div>
+          <a href="#">Team</a>
+          <a href="#">Services</a>
+          <a href="#">About Us</a>
+        </div>
+        <div>
+          <a href="#">Press</a>
+          <a href="#">Projects</a>
+          <a href="#">Privacy Policy</a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
