--- a/index.html
+++ b/index.html
@@ -129,53 +129,64 @@
             alt="foto noia"
           />
           <div>
-            <h5>Kristin Watson</h5>
+            <h4>Kristin Watson</h4>
             <p>Booking.com</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section>
-      <h1>Our Services</h1>
-      <div>
-        <!-- User Interface Design -->
-        <img src="" alt="ilustracio ploma" />
-        <h3>User Interface Design</h3>
-        <p>
-          Circle provides you with a stunning user interface design that is
-          accessible to everyone.
-        </p>
-        <a href="#">Learn More</a>
-      </div>
-      <div>
-        <!-- User Experience Design -->
-        <img src="" alt="puntero" />
-        <h3>User Experience Design</h3>
-        <p>
-          Circle always focuses on delivering the best user experience to your
-          customers.
-        </p>
-        <a href="#">Learn More</a>
-      </div>
-      <div>
-        <!-- Application Development -->
-        <img src="" alt="full" />
-        <h3>Application Development</h3>
-        <p>
-          We develop high-quality mobile and web applications using the latest
-          technology stack.
-        </p>
-        <a href="#">Learn More</a>
+    <section class="section5">
+      <h2>Our Services</h2>
+      <div class="grup-sec3">
+        <div class="ficha-sec3">
+          <!-- User Interface Design -->
+          <img
+            src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262149/mid-term-work/Icon_xxldyf.png"
+            alt="ilustracio ploma"
+          />
+          <h3>User Interface Design</h3>
+          <p>
+            Circle provides you with a stunning user interface design that is
+            accessible to everyone.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
+        <div class="ficha-sec3">
+          <!-- User Experience Design -->
+          <img
+            src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262142/mid-term-work/Group_54_xjonmo.png"
+            alt="puntero"
+          />
+          <h3>User Experience Design</h3>
+          <p>
+            Circle always focuses on delivering the best user experience to your
+            customers.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
+        <div class="ficha-sec3">
+          <!-- Application Development -->
+          <img
+            src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262139/mid-term-work/Group_54_1_f98ctt.png"
+            alt="full"
+          />
+          <h3>Application Development</h3>
+          <p>
+            We develop high-quality mobile and web applications using the latest
+            technology stack.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
       </div>
     </section>
 
-    <section>
+    <section class="section6">
       <h2>Do you have any questions?</h2>
       <p>Let us help you!</p>
       <form action="">
-        <input type="email" placeholder="Enter your email" />
-        <input type="submit" value="Suscribe" />
+        <input type="email" placeholder="Enter your email" class="formulari" />
+        <input type="submit" value="Suscribe" class="boto-contact" />
       </form>
     </section>
 
@@ -187,16 +198,16 @@
         />
         <p>2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
       </div>
-      <div class="footer-menu">
-        <div>
-          <a href="#">Team</a>
-          <a href="#">Services</a>
-          <a href="#">About Us</a>
+      <div>
+        <div class="footer-menu">
+          <a href="#" class="menu-links">Team</a>
+          <a href="#" class="menu-links">Services</a>
+          <a href="#" class="menu-links">About Us</a>
         </div>
-        <div>
-          <a href="#">Press</a>
-          <a href="#">Projects</a>
-          <a href="#">Privacy Policy</a>
+        <div class="footer-menu">
+          <a href="#" class="menu-links">Press</a>
+          <a href="#" class="menu-links">Projects</a>
+          <a href="#" class="menu-links">Privacy Policy</a>
         </div>
       </div>
     </footer>
