--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
           src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658245410/mid-term-work/Hero_Image_2_xu2ykg.png"
           alt="imatge d'una persona "
         />
+        <img
+          src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658304341/mid-term-work/Card_1_yvgouv.png"
+          alt="targeta"
+          class="cont1-targetes-volants"
+        />
+        <!-- <div class="cont1-targetes-volants">
+          <img
+            src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658304341/mid-term-work/Card_1_yvgouv.png"
+            alt="targeta"
+          />
+          <img
+            src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658304345/mid-term-work/Card_2_xklykf.png"
+            alt="emogi like"
+          />
+        </div> -->
       </div>
     </section>
 
@@ -64,7 +79,7 @@
       />
       <img
         src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658301734/mid-term-work/FedEx_Logo_1_1_fltzfi.png"
-        alt="Logo FedEx"
+        alt="Logo FedEx "
       />
       <img
         src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658301734/mid-term-work/Amazon_Logo_1_1_lft4fk.png"
@@ -118,7 +133,7 @@
       <div>
         <div>
           <h2>Hear What Our Clients Have to Say</h2>
-          <p>
+          <p class="p2">
             "Circle helped us through every stage of our startup. We really
             enjoyed working with you."
           </p>
@@ -130,7 +145,7 @@
           />
           <div>
             <h4>Kristin Watson</h4>
-            <p>Booking.com</p>
+            <p class="p3">Booking.com</p>
           </div>
         </div>
       </div>
@@ -139,44 +154,50 @@
     <section class="section5">
       <h2>Our Services</h2>
       <div class="grup-sec3">
-        <div class="ficha-sec3">
+        <div class="ficha-sec5">
           <!-- User Interface Design -->
           <img
             src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262149/mid-term-work/Icon_xxldyf.png"
             alt="ilustracio ploma"
           />
-          <h3>User Interface Design</h3>
-          <p>
-            Circle provides you with a stunning user interface design that is
-            accessible to everyone.
-          </p>
-          <a href="#">Learn More</a>
+          <div>
+            <h3>User Interface Design</h3>
+            <p>
+              Circle provides you with a stunning user interface design that is
+              accessible to everyone.
+            </p>
+            <a href="#">Learn More</a>
+          </div>
         </div>
-        <div class="ficha-sec3">
+        <div class="ficha-sec5">
           <!-- User Experience Design -->
           <img
             src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262142/mid-term-work/Group_54_xjonmo.png"
             alt="puntero"
           />
-          <h3>User Experience Design</h3>
-          <p>
-            Circle always focuses on delivering the best user experience to your
-            customers.
-          </p>
-          <a href="#">Learn More</a>
+          <div>
+            <h3>User Experience Design</h3>
+            <p>
+              Circle always focuses on delivering the best user experience to
+              your customers.
+            </p>
+            <a href="#">Learn More</a>
+          </div>
         </div>
-        <div class="ficha-sec3">
+        <div class="ficha-sec5">
           <!-- Application Development -->
           <img
             src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262139/mid-term-work/Group_54_1_f98ctt.png"
             alt="full"
           />
-          <h3>Application Development</h3>
-          <p>
-            We develop high-quality mobile and web applications using the latest
-            technology stack.
-          </p>
-          <a href="#">Learn More</a>
+          <div>
+            <h3>Application Development</h3>
+            <p>
+              We develop high-quality mobile and web applications using the
+              latest technology stack.
+            </p>
+            <a href="#">Learn More</a>
+          </div>
         </div>
       </div>
     </section>
