--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
           src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658245410/mid-term-work/Hero_Image_2_xu2ykg.png"
           alt="imatge d'una persona "
         />
-        <img
+        <!-- <img
           src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658304341/mid-term-work/Card_1_yvgouv.png"
           alt="targeta"
           class="cont1-targetes-volants"
-        />
+        /> -->
         <!-- <div class="cont1-targetes-volants">
           <img
             src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658304341/mid-term-work/Card_1_yvgouv.png"
@@ -129,21 +129,20 @@
       </div>
     </section>
 
-    <section class="section4">
-      <div>
-        <div>
-          <h2>Hear What Our Clients Have to Say</h2>
-          <p class="p2">
-            "Circle helped us through every stage of our startup. We really
-            enjoyed working with you."
-          </p>
-        </div>
+    <section>
+      <div class="section4">
+        <h2>Hear What Our Clients Have to Say</h2>
+        <p class="p2">
+          "Circle helped us through every stage of our startup. We really
+          enjoyed working with you."
+        </p>
+
         <div class="targeta-noia">
           <img
             src="https://res.cloudinary.com/dbb11wiyg/image/upload/v1658262154/mid-term-work/Ellipse_24_ssiqci.png"
             alt="foto noia"
           />
-          <div>
+          <div class="text-targeta">
             <h4>Kristin Watson</h4>
             <p class="p3">Booking.com</p>
           </div>
