--- a/contact.html
+++ b/contact.html
@@ -29,10 +29,51 @@
       </div>
     </nav>
 
-    <section class="section1">
-      <div class="cont1-esquerra">
+    <section class="">
+      <div class="">
         <h1>Empower Your Business With Stunning Design!</h1>
       </div>
+
+      <form action="" method="post">
+        <div class="formulari-container">
+          <!-- si no se linkea el for i el id (ha de ser id, no classe), no tienen relacion input con label i no reacciona uno a otro -->
+          <label for="name-full">Full Name</label>
+          <input
+            type="text"
+            id="name-full"
+            placeholder="Enter your full name"
+          />
+        </div>
+        <div class="formulari-container">
+          <!-- si no se linkea el for i el id (ha de ser id, no classe), no tienen relacion input con label i no reacciona uno a otro -->
+          <label for="email">Email</label>
+          <input
+            type="email"
+            id="email"
+            placeholder="Enter your email address"
+          />
+        </div>
+        <div class="formulari-container">
+          <!-- si no se linkea el for i el id (ha de ser id, no classe), no tienen relacion input con label i no reacciona uno a otro -->
+          <label for="phone">Phone</label>
+          <input
+            type="number"
+            id="phone"
+            placeholder="Enter your phone number"
+          />
+        </div>
+        <div class="formulari-container">
+          <!-- si no se linkea el for i el id (ha de ser id, no classe), no tienen relacion input con label i no reacciona uno a otro -->
+          <label for="message">Message</label>
+          <textarea
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+            placeholder="Write your message here ...."
+          ></textarea>
+        </div>
+      </form>
     </section>
 
     <footer>
